// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /login should return 200 status code match snapshot 1`] = `
"
<!DOCTYPE html>
<html lang="en">
    
	<head>
		<meta charset="utf-8">
		<meta name="viewport" content="width=device-width, initial-scale=1">
        <meta name="description" content="Faultifier - a ticket handling admin service.">
        <meta name="theme-color" content="blue">
		<title>Login - Faultifier</title>
		<link rel="stylesheet" type="text/css" href="/main.css">
	</head>

    <div class="flex flex-col h-screen justify-between overflow-hidden">
        <nav class="flex items-center justify-between flex-wrap bg-gray-100 p-6">
    <div class="flex items-center flex-shrink-0 text-picton-blue-600 mr-6">
        <a href="/"><span class="font-bold text-xl tracking-tight font-sans">FAULTIFIER</span></a>
    </div>
    
    
</nav>

        <body class="bg-gradient-to-tr from-picton-blue-600 to-yellow-500 overflow-hidden">
            <main>
<div class="p-12 bg-white sm:mx-auto rounded-md w-1/2 max-sm:w-full max-sm:p-6">
	<a href="/" class="float-left text-sm font-bold text-sky-600 hover:text-sky-600">Go back</a><br>
	
	
    <div class="mb-5">
		<h3 class="font-semibold text-2xl text-gray-800">Sign In</h3>
		<p class="text-gray-400">Don&#39;t have an account? <a href="/signup" class="text-sm font-bold text-sky-600 hover:text-sky-600">Sign Up</a></p>
	</div>

	
	

  

  

	
	<form action="/login/password" method="post" novalidate>
			
    	
			
			

  
  
  
  
  
  <div class="relative">
    <div class="flex flex-row items-center border-b sm:border-b-0 w-full sm:w-auto py-2 sm:pb-0">
      
      <label for='username' class="text-gray-500 ">Username or Email</label>
    </div>
    <input id="username" name="username" type="text" value="" placeholder="username" autocomplete="username" required  class="w-full text-sm px-4 py-3 bg-gray-200 focus:bg-gray-100 border border-gray-200 rounded-lg focus:outline-none focus:border-picton-blue-500 mb-6">  
  </div>

  
  
  
  
  
  <div class="relative">
    <div class="flex flex-row items-center border-b sm:border-b-0 w-full sm:w-auto py-2 sm:pb-0">
      
      <label for='password' class="text-gray-500 ">Password</label>
    </div>
    <input id="password" name="password" type="password" value="" placeholder="password" autocomplete="password" required  class="w-full text-sm px-4 py-3 bg-gray-200 focus:bg-gray-100 border border-gray-200 rounded-lg focus:outline-none focus:border-picton-blue-500 mb-6">  
  </div>


			
    <button type="submit" class="w-full flex justify-center bg-picton-blue-500 hover:bg-picton-blue-700 text-gray-100 p-3  rounded-lg tracking-wide font-semibold  cursor-pointer transition ease-in duration-500">
        Sign in
    </button>

	</form>
</div>
</main>
        </body>

        
        <footer class="lg:text-left bg-gray-100 text-gray-600">
            <div class="text-center p-6">
                <span>© 2023 </span>
                <a class="text-gray-600 font-semibold" href="https://github.com/WORTI3">Wortie</a>
            </div>
        </footer>
    </div>
</html>"
`;

exports[`GET /signup should return 200 status code match snapshot 1`] = `
"
<!DOCTYPE html>
<html lang="en">
    
	<head>
		<meta charset="utf-8">
		<meta name="viewport" content="width=device-width, initial-scale=1">
        <meta name="description" content="Faultifier - a ticket handling admin service.">
        <meta name="theme-color" content="blue">
		<title>Sign up - Faultifier</title>
		<link rel="stylesheet" type="text/css" href="/main.css">
	</head>

    <div class="flex flex-col h-screen justify-between overflow-hidden">
        <nav class="flex items-center justify-between flex-wrap bg-gray-100 p-6">
    <div class="flex items-center flex-shrink-0 text-picton-blue-600 mr-6">
        <a href="/"><span class="font-bold text-xl tracking-tight font-sans">FAULTIFIER</span></a>
    </div>
    
    
</nav>

        <body class="bg-gradient-to-tr from-picton-blue-600 to-yellow-500 overflow-hidden">
            <main>
<div class="p-12 bg-white sm:mx-auto rounded-md w-1/2 max-sm:w-full max-sm:p-6">
	<a href="/" class="float-left text-sm font-bold text-sky-600 hover:text-sky-600">Go back</a><br>
	
    <div class="mb-5">
		<h3 class="font-semibold text-2xl text-gray-800">Sign up</h3>
		<p class="text-gray-400">Already have an account? <a href="/login" class="text-sm font-bold text-sky-600 hover:text-sky-600">Sign in</a></p>
	</div>

	
	

  

  

	<form action="/signup" method="post" novalidate>
    	
    	
			
			

  
  
  
  
  
  <div class="relative">
    <div class="flex flex-row items-center border-b sm:border-b-0 w-full sm:w-auto py-2 sm:pb-0">
      
      <label for='username' class="text-gray-500 ">Username or Email</label>
    </div>
    <input id="username" name="username" type="text" value="" placeholder="username" autocomplete="username" required  class="w-full text-sm px-4 py-3 bg-gray-200 focus:bg-gray-100 border border-gray-200 rounded-lg focus:outline-none focus:border-picton-blue-500 mb-6">  
  </div>

  
  
  
  
  
  <div class="relative">
    <div class="flex flex-row items-center border-b sm:border-b-0 w-full sm:w-auto py-2 sm:pb-0">
      
      <label for='password' class="text-gray-500 ">Password</label>
    </div>
    <input id="password" name="password" type="password" value="" placeholder="password" autocomplete="password" required  class="w-full text-sm px-4 py-3 bg-gray-200 focus:bg-gray-100 border border-gray-200 rounded-lg focus:outline-none focus:border-picton-blue-500 mb-6">  
  </div>


			<p class="-mt-6 mb-4 font-semibold text-xs mx-2 text-gray-500">Password must be at least 5 characters containing 1 uppercase letter, 1 lowercase letter, 1 number and 1 special character</p>
			
    <button type="submit" class="w-full flex justify-center bg-picton-blue-500 hover:bg-picton-blue-700 text-gray-100 p-3  rounded-lg tracking-wide font-semibold  cursor-pointer transition ease-in duration-500">
        Sign up
    </button>

	</form>
</div>
</main>
        </body>

        
        <footer class="lg:text-left bg-gray-100 text-gray-600">
            <div class="text-center p-6">
                <span>© 2023 </span>
                <a class="text-gray-600 font-semibold" href="https://github.com/WORTI3">Wortie</a>
            </div>
        </footer>
    </div>
</html>"
`;
